force-app/main/default/objects/Line_of_Credit_Application__c/Line_of_Credit_Application__c.object-meta.xml
<CustomObject>
    <label>Line of Credit Application</label>
    <nameField>
        <displayFormat>LOC-{000000}</displayFormat>
        <label>Line of Credit Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line of Credit Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>