force-app/main/default/objects/Line_of_Credit_Application__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Interest Rate</label>
    <precision>9</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>