force-app/main/default/objects/Line_of_Credit_Application__c/fields/Revolving__c.field-meta.xml
<CustomField>
    <fullName>Revolving__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revolving</label>
    <type>Checkbox</type>
</CustomField>